--- a/pemesanan/src/main/resources/templates/login_user.html
+++ b/pemesanan/src/main/resources/templates/login_user.html
@@ -22,7 +22,7 @@
 	<div class="login-page" style="">
 		<div class="form">
 			<center>
-				<img src="img/logo.png" alt="" width="120" height="120" >
+				<img src="../../assets/img/logo3.png" alt="" width="120" height="120" >
 				<h1 style="">LOGIN </h1>
 			</center>
 			<br>
