--- a/pemesanan/src/main/resources/templates/forms/productforms.html
+++ b/pemesanan/src/main/resources/templates/forms/productforms.html
@@ -615,14 +615,14 @@
 							<form id="form"  th:action="@{/product/create}" th:object="${product}" method="post" novalidate enctype="multipart/form-data">
 							<div class="card">
 								<div class="card-header">
-									<div class="card-title"><b>Tambah product</b></div>
+									<div class="card-title"><b>Tambah produk</b></div>
 								</div>
 								<div class="card-body">
 									<div class="row">
 										<div class="col-md-6 col-lg-4">
 											<div class="form-group form-floating-label">
 												<input type="text" class="form-control input-bOrder-bottom" th:field="*{productName}"  id="productName" name="productName" required>
-												<label for="productName" class="placeholder">Nama product</label>
+												<label for="productName" class="placeholder">Nama produk</label>
 											</div>
 											<!--<div class="form-group form-floating-label">
 												<input type="text" class="form-control input-bOrder-bottom" th:field="*{description}"  rows="3" cols="45" id="description" name="description" required>
@@ -633,7 +633,7 @@
 													<div class="input-group-prepend">
 														<span class="input-group-text">Deskripsi</span>
 													</div>
-													<textarea class="form-control" aria-label="With textarea" name="description"  th:field="*{description}" required="true"></textarea>
+													<textarea class="form-control" aria-label="With textarea" name="description"  th:field="*{description}" required></textarea>
 												</div>
 											</div>
 											<div class="form-group form-floating-label">
@@ -643,7 +643,7 @@
 											<div class="form-group form-floating-label" >
 												<label for="image" class="placeholder">Gambar</label>
 												<br><br>
-												<input type="file" class="form-control-file" name="image" id="image" th:field="*{image}">
+												<input type="file" class="form-control-file" name="image" id="image" th:field="*{image}" required>
 											</div>
 										</div>
 									</div>
