--- a/pemesanan/src/main/resources/templates/forms/productformsU.html
+++ b/pemesanan/src/main/resources/templates/forms/productformsU.html
@@ -781,7 +781,7 @@
 											<div class="form-group form-floating-label" >
 												<label for="image" class="placeholder">Gambar</label>
 												<br><br>
-												<input type="file" class="form-control-file" name="image" id="image" th:field="*{image}">
+												<input type="file" class="form-control-file" name="image" id="image" th:field="*{image}" required>
 											</div>
 											<!--<div class="form-group form-floating-label">
 												<select class="form-control input-bOrder-bottom" id="selectFloatingLabel" required>
