--- a/pemesanan/src/main/resources/templates/forms/orderforms.html
+++ b/pemesanan/src/main/resources/templates/forms/orderforms.html
@@ -471,13 +471,14 @@
 																<p>NOTE</p>
 																<ul>
 																	<li>maksimal jumlah produk pesanan 400 pcs.</li>
-																	<li>jumlah lebih dari 100 pcs, 15 hari pengerjaan.</li>
-																	<li>jumlah lebih dari 200 pcs, 30 hari pengerjaan.</li>
-																	<li>jumlah lebih dari 300 pcs, 45 hari pengerjaan.</li>
-																	<li>jumlah lebih dari 400 pcs, 60 hari pengerjaan.</li>
+																	<li>jumlah <= 100 pcs, 15 hari pengerjaan.</li>
+																	<li>jumlah <= 200 pcs, 30 hari pengerjaan.</li>
+																	<li>jumlah <= 300 pcs, 45 hari pengerjaan.</li>
+																	<li>jumlah <= 400 pcs, 60 hari pengerjaan.</li>
 																	Syarat pesanan diterima :
 																	<li>maksimal dp adalah 30% dari total estimasi harga</li>
 																	<li>nama rekening sama dengan akun / tambahkan catatan nama pemesan jika menggunakan rekening lain</li>
+																	<li>Rek. Transfer BCA a/n Persada Konveksi 5140630383 </li>
 																</ul>
 															</div>
 														</div>
