--- a/pemesanan/src/main/resources/templates/indexC.html
+++ b/pemesanan/src/main/resources/templates/indexC.html
@@ -254,6 +254,7 @@
                             </div>
                         </div>
                     </li>-->
+                    <li><img src="../assets/img/whatsapp-logo-1 (1).png" alt="">081225462162</li><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                     <li class="nav-item dropdown hidden-caret">
                          <a class="dropdown-toggle profile-pic" data-toggle="dropdown" th:href="@{/logout}" aria-expanded="false">
                             <div class="avatar-sm">&nbsp;&nbsp;&nbsp;Logout
