--- a/pemesanan/src/main/resources/static/assets/css/demo.css
+++ b/pemesanan/src/main/resources/static/assets/css/demo.css
@@ -3,8 +3,24 @@
     height:340px;
      display: block;
         margin-left: auto;
-        margin-right: auto;
+        margin-right: auto;navbar-nav
 }
+
+.navbar-nav img{
+    height: 30px;
+    width: 30px;
+    margin-right: 8px;
+
+
+}
+.navbar-nav li{
+    color:white;
+}
+
+a .avatar-sm{
+    height:100px;
+}
+
 
 .custom-template {
 	position: fixed;
