--- a/pemesanan/src/main/resources/templates/tables/showdetailproductunlogin.html
+++ b/pemesanan/src/main/resources/templates/tables/showdetailproductunlogin.html
@@ -21,7 +21,6 @@
 		});
 	</script>
 
-
 	<!-- CSS Files -->
 	<link rel="stylesheet" href="../../assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="../../assets/css/atlantis.min.css">
@@ -29,8 +28,6 @@
 	<link rel="stylesheet" href="../../assets/css/demo.css">
 </head>
 <body>
-
-
 	<div class="wrapper">
 		<div class="main-header">
 			<!-- Logo Header -->
@@ -77,31 +74,25 @@
 						</li>
 
 						<li class="nav-item dropdown hidden-caret">
-							<a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false">
+							<!--<a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false">
 								<div class="avatar-sm">
 									&nbsp;&nbsp;&nbsp;Logout
-									<!--<img src="../../assets/img/profile.jpg" alt="..." class="avatar-img rounded-circle">-->
+									&lt;!&ndash;<img src="../../assets/img/profile.jpg" alt="..." class="avatar-img rounded-circle">&ndash;&gt;
 								</div>
-							</a>
+							</a>-->
 							<ul class="dropdown-menu dropdown-user animated fadeIn">
 								<div class="dropdown-user-scroll scrollbar-outer">
-									<li>
+									<!--<li>
 										<div class="user-box">
-											<!--<div class="avatar-lg"><img src="../../assets/img/profile.jpg" alt="image profile" class="avatar-img rounded"></div>-->
+											&lt;!&ndash;<div class="avatar-lg"><img src="../../assets/img/profile.jpg" alt="image profile" class="avatar-img rounded"></div>&ndash;&gt;
 											<h4 th:text="${userName}"></h4>
 											<p class="text-muted" th:text="${userEmail}"></p>
 										</div>
 									</li>
 									<li>
-										<!--<div class="dropdown-divider"></div>
-										<a class="dropdown-item" href="#">My Profile</a>
-										<a class="dropdown-item" href="#">My Balance</a>
-										<a class="dropdown-item" href="#">Inbox</a>
-										<div class="dropdown-divider"></div>
-										<a class="dropdown-item" href="#">Account Setting</a>
-										<div class="dropdown-divider"></div>-->
+
 										<a class="dropdown-item" th:href="@{/logout}">Logout</a>
-									</li>
+									</li>-->
 								</div>
 							</ul>
 						</li>
@@ -242,20 +233,19 @@
 							</div>
 						</li>-->
 						<li class="nav-item">
-							<a data-toggle="collapse" href="#forms">
+							<!--<a data-toggle="collapse" href="#forms">
 								<i class="fas fa-pen-square"></i>
 								<p>Forms</p>
 								<span class="caret"></span>
-							</a>
+							</a>-->
 							<div class="collapse" id="forms">
 								<ul class="nav nav-collapse">
 									<!--<li>
 										<a th:href="@{/product}">
 											<span class="sub-item">Form Produk</span>
 										</a>
-
 									</li>-->
-									<li>
+								<!--	<li>
 										<a th:href="@{ordering/order}">
 											<span class="sub-item">Form Pemesanan</span>
 										</a>
@@ -264,8 +254,14 @@
 										<a th:href="@{transaction/form}">
 											<span class="sub-item">Form Transaksi</span>
 										</a>
-									</li>
 
+									</li>-->
+									<!--<li>
+										<a th:href="@{user/registration}">
+											<span class="sub-item">Form Pelanggan</span>
+										</a>
+									</li>
+-->
 								</ul>
 							</div>
 						</li>
@@ -276,7 +272,7 @@
 								<span class="caret"></span>
 							</a>
 							<div class="collapse show" id="tables">
-								<ul class="nav nav-collapse">
+								<!--<ul class="nav nav-collapse">
 									<li>
 										<a th:href="@{/product/show}">
 											<span class="sub-item">Produk</span>
@@ -292,8 +288,18 @@
 											<span class="sub-item">Transaksi</span>
 										</a>
 									</li>
+									&lt;!&ndash;<li>
+										<a th:href="@{/sale/show}">
+											<span class="sub-item">Penjualan</span>
+										</a>
+									</li>
+									<li>
+										<a th:href="@{/user/customer}">
+											<span class="sub-item">Pelanggan</span>
+										</a>
+									</li>&ndash;&gt;
 
-								</ul>
+								</ul>-->
 							</div>
 						</li>
 						<!--<li class="nav-item">
@@ -348,7 +354,7 @@
 			<div class="content">
 				<div class="page-inner">
 					<div class="page-header">
-						<h4 class="page-title">Pesanan</h4>
+						<h4 class="page-title">Data Tabel</h4>
 						<ul class="breadcrumbs">
 							<li class="nav-home">
 								<a href="#">
@@ -364,8 +370,18 @@
 							<li class="separator">
 								<i class="flaticon-right-arrow"></i>
 							</li>
-							<li class="nav-item">
-								<a href="#">Pesanan</a>
+							<li>
+								<a th:href="@{/product/show}">
+									<span class="sub-item">Produk</span>
+								</a>
+							</li>
+							<li class="separator">
+								<i class="flaticon-right-arrow"></i>
+							</li>
+							<li>
+								<a>
+									<span class="sub-item">Detail produk</span>
+								</a>
 							</li>
 						</ul>
 					</div>
@@ -402,104 +418,34 @@
 										<table id="add-row" class="display table table-striped table-hover" >
 											<thead>
 											<tr>
-												<th>Id Pesanan</th>
-												<!--<th>Id produk</th>-->
-												<th>Pelanggan</th>
-												<th>Tanggal Pesan</th>
-												<th>Tenggat Waktu</th>
-												<!--<th>Total Harga</th>-->
-												<th>Status Pesanan</th>
-												<th>Progress</th>
-												<th>Status Pembayaran</th>
-												<th>Aksi</th>
+												<tr>
+													<td>Nama produk</td>
+													<td th:text="${product.productName}"></td>
+												</tr>
+												<tr>
+													<td>Harga</td>
+													<td th:text="${product.price}"></td>
+												</tr>
+												<tr>
+													<td>Deskripsi</td>
+													<td th:text="${product.description}"></td>
+												</tr>
+												<!--<tr>
+													<td th:text="${products.fileName}"></td>
+												</tr>-->
+												<tr>
+													<td>Gambar</td>
+													<td> <img th:src="'/resources/static/upload/' +${product.fileName}" alt="" width="210px" height="240px"></td>
+												</tr>
+												<tr>
+													<td> </td>
+													<td> </td>
+												</tr>
+												<!--<tr>
+													<input type="hidden" th:id="id_Order" th:name="id_Order" th:value="${order.id_Order}"/>
+												</tr>-->
 											</tr>
 											</thead>
-											<tbody>
-												<th:set var="count" value="0" scope="page"></th:set>
-												<tr th:each="order : ${order}">
-													<th:set var="count" value="${count + 1}" scope="page"></th:set>
-													<td th:text="${order.id_Order}"></td>
-													<!--<td th:text="${order.product.id_product}"></td>-->
-													<td th:text="${order.user.name}"></td>
-													<td th:text="${order.OrderDate}"></td>
-													<td th:text="${order.deadline}"></td>
-													<!--<td th:text="${order.dp}"></td>-->
-													<!--<td th:text="${order.OrderDetails}"></td>
-													<td th:text="${order.quantity}"></td>-->
-													<!--<td th:text="${order.totalCost}"></td>-->
-													<td th:text="${order.statusOrder}"></td>
-													<td th:text="${order.percentage}"></td>
-													<td th:text="${order.statusPayment}" id="sts"></td>
-
-													<div th:if="${order.statusPayment=='Pay off'}">
-														<td>
-															<div class="form-button-action">
-																<button type="button"  title="" class="btn btn-link btn-primary btn-lg" data-original-title="Detail">
-																	<a th:href="@{/ordering/detail/{id} (id=${order.id_Order})}" class="btn btn-warning text-right" target="_blank">
-																		<!--<i class="fa fa-file"></i>-->Detail <!--data-toggle="tooltip"-->
-																	</a>
-																</button>
-															</div>
-														</td>
-													</div>
-													<div th:if="${order.statusPayment=='Pending'}">
-														<td>
-															<div class="form-button-action">
-																<button type="button"  title="" class="btn btn-link btn-primary btn-lg" data-original-title="Detail">
-																	<a th:href="@{/ordering/detail/{id} (id=${order.id_Order})}" class="btn btn-warning text-right" target="_blank">
-																		<!--<i class="fa fa-file"></i>-->Detail <!--data-toggle="tooltip"-->
-																	</a>
-																</button>
-															</div>
-															<div th:if="${order.statusOrder=='Diterima'}">
-<!--														<td>-->
-															<div class="form-button-action">
-																<!--<button type="button"  title="" class="btn btn-link btn-primary btn-lg" data-original-title="Detail">
-																	<a th:href="@{/ordering/detail/{id} (id=${order.id_Order})}" class="btn btn-warning text-right" target="_blank">
-																		&lt;!&ndash;<i class="fa fa-file"></i>&ndash;&gt;Detail &lt;!&ndash;data-toggle="tooltip"&ndash;&gt;
-																	</a>
-																</button>-->
-																<button type="button"  title="" class="btn btn-link btn-primary btn-lg" data-original-title="Bayar" id="btnBayar">
-																	<a th:href="@{'/transaction/form/' + ${order.id_Order}}"  class="btn btn-success text-right" target="_blank">
-																		<!--<i class="fa fa-money" aria-hidden="true"></i>-->Bayar <!--data-toggle="tooltip"-->
-																	</a>
-																</button>
-															</div>
-															</div>
-<!--														</td>-->
-														</td>
-													</div>
-													<!--<div th:if="${order.statusOrder=='Diterima'}">
-														<td>
-															<div class="form-button-action">
-																&lt;!&ndash;<button type="button"  title="" class="btn btn-link btn-primary btn-lg" data-original-title="Detail">
-																	<a th:href="@{/ordering/detail/{id} (id=${order.id_Order})}" class="btn btn-warning text-right" target="_blank">
-																		&lt;!&ndash;<i class="fa fa-file"></i>&ndash;&gt;Detail &lt;!&ndash;data-toggle="tooltip"&ndash;&gt;
-																	</a>
-																</button>&ndash;&gt;
-																<button type="button"  title="" class="btn btn-link btn-primary btn-lg" data-original-title="Bayar" id="btnBayar">
-																	<a th:href="@{'/transaction/form/' + ${order.id_Order}}"  class="btn btn-success text-right" target="_blank">
-																		&lt;!&ndash;<i class="fa fa-money" aria-hidden="true"></i>&ndash;&gt;Bayar &lt;!&ndash;data-toggle="tooltip"&ndash;&gt;
-																	</a>
-																</button>
-															</div>
-														</td>
-													</div>-->
-													<div th:unless="${order.statusPayment=='Pending'}">
-														<div th:unless="${order.statusPayment=='Pay off'}">
-															<td>
-																<div class="form-button-action">
-																	<button type="button"  title="" class="btn btn-link btn-primary btn-lg" data-original-title="Detail">
-																		<a th:href="@{/ordering/detail/{id} (id=${order.id_Order})}" class="btn btn-warning text-right" target="_blank">
-																			<!--<i class="fa fa-file"></i>-->Detail <!--data-toggle="tooltip"-->
-																		</a>
-																	</button>
-																</div>
-
-														</div>
-													</div>
-												</tr>
-											</tbody>
 										</table>
 									</div>
 								</div>
