--- a/pemesanan/src/main/resources/templates/forms/productforms.html
+++ b/pemesanan/src/main/resources/templates/forms/productforms.html
@@ -643,7 +643,7 @@
 											<div class="form-group form-floating-label" >
 												<label for="image" class="placeholder">Gambar</label>
 												<br><br>
-												<input type="file" class="form-control-file" name="image" id="image" th:field="*{image}" required>
+												<input type="file" accept="image/*" class="form-control-file" name="image" id="image" th:field="*{image}" required>
 											</div>
 										</div>
 									</div>
