--- a/pemesanan/src/main/resources/templates/register.html
+++ b/pemesanan/src/main/resources/templates/register.html
@@ -42,7 +42,7 @@
                         <br>
                         <div class="form-group">
                             <label style="color: white">No Telepon</label>
-                            <input class="text " type="text" name="noTelepon"  required="required" th:value="${user.noTelepon}">
+                            <input class="tel " type="text" name="noTelepon"  required="required" th:value="${user.noTelepon}">
                         </div>
                         <br>
                         <div class="form-group">
