--- a/pemesanan/src/main/resources/templates/tables/showproductunlogin.html
+++ b/pemesanan/src/main/resources/templates/tables/showproductunlogin.html
@@ -138,106 +138,10 @@
                     <li class="nav-section">
 							<span class="sidebar-mini-icon">
 								<i class="fa fa-ellipsis-h"></i>
-							</span>
-                        <h4 class="text-section">Components</h4>
+							</span>ompone
+                        <h4 class="text-section">Cnts</h4>
                     </li>
-                    <!--<li class="nav-item">
-                        <a data-toggle="collapse" href="#base">
-                            <i class="fas fa-layer-group"></i>
-                            <p>Base</p>
-                            <span class="caret"></span>
-                        </a>
-                        <div class="collapse" id="base">
-                            <ul class="nav nav-collapse">
-                                <li>
-                                    <a href="../components/avatars.html">
-                                        <span class="sub-item">Avatars</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="../components/buttons.html">
-                                        <span class="sub-item">Buttons</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="../components/gridsystem.html">
-                                        <span class="sub-item">Grid System</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="../components/panels.html">
-                                        <span class="sub-item">Panels</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="../components/notifications.html">
-                                        <span class="sub-item">Notifications</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="../components/sweetalert.html">
-                                        <span class="sub-item">Sweet Alert</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="../components/font-awesome-icons.html">
-                                        <span class="sub-item">Font Awesome Icons</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="../components/simple-line-icons.html">
-                                        <span class="sub-item">Simple Line Icons</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="../components/flaticons.html">
-                                        <span class="sub-item">Flaticons</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="../components/typography.html">
-                                        <span class="sub-item">Typography</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>-->
-                    <!--<li class="nav-item">
-                        <a data-toggle="collapse" href="#sidebarLayouts">
-                            <i class="fas fa-th-list"></i>
-                            <p>Sidebar Layouts</p>
-                            <span class="caret"></span>
-                        </a>
-                        <div class="collapse" id="sidebarLayouts">
-                            <ul class="nav nav-collapse">
-                                <li>
-                                    <a href="../sidebar-style-1.html">
-                                        <span class="sub-item">Sidebar Style 1</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="../overlay-sidebar.html">
-                                        <span class="sub-item">Overlay Sidebar</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="../compact-sidebar.html">
-                                        <span class="sub-item">Compact Sidebar</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="../static-sidebar.html">
-                                        <span class="sub-item">Static Sidebar</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="../icon-menu.html">
-                                        <span class="sub-item">Icon Menu</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>-->
+
                     <li class="nav-item">
                         <a  th:href="@{/user/registration}">
                             <i class="fas fa-pen-square"></i>
@@ -249,30 +153,6 @@
                             <p>Login</p>
                             <span class="caret"></span>
                         </a>
-                     <!--   <div class="collapse" id="forms">
-                            <ul class="nav nav-collapse">
-                                &lt;!&ndash; <li>
-                                     <a th:href="@{/product}">
-                                         <span class="sub-item">Form Produk</span>
-                                     </a>
-                                 </li>&ndash;&gt;
-                                <li>
-                                    <a th:href="@{ordering/order}">
-                                        <span class="sub-item">Form Pemesanan</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a th:href="@{transaction/form}">
-                                        <span class="sub-item">Form Transaksi</span>
-                                    </a>
-                                </li>
-                                &lt;!&ndash; <li>
-                                     <a th:href="@{user/registration}">
-                                         <span class="sub-item">Form Pelanggan</span>
-                                     </a>
-                                 </li>&ndash;&gt;
-                            </ul>
-                        </div>-->
                     </li>
                     <li class="nav-item active submenu">
                         <a data-toggle="collapse" href="#tables">
@@ -375,7 +255,7 @@
                     </ul>
                 </div>
                 <div class="abc">
-                    Lakukan pendaftaran untuk melakukan pemesanan
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lakukan pendaftaran untuk melakukan pemesanan
 
                 </div>
                 <div class="row">
