--- a/pemesanan/src/main/resources/templates/forms/orderforms.html
+++ b/pemesanan/src/main/resources/templates/forms/orderforms.html
@@ -43,11 +43,18 @@
 
 			if(dp<jmlDp){
 				alert("Total biaya : " + bayar + "\nMinimal DP sebesar " + jmlDp);
+				document.getElementById("image").disabled = true;
+				document.getElementById("submit").disabled = true;
 				return false;
 
-			}else if(dp>jmlDp){
+			}if(dp>jmlDp){
 				alert("Total biaya : " + bayar + "\nMaksimal DP sebesar " + bayar);
+				document.getElementById("image").disabled = true;
+				document.getElementById("submit").disabled = true;
 				return false;
+			}else{
+				document.getElementById("image").disabled = false;
+				document.getElementById("submit").disabled = false;
 			}
 
 			 var S = Number(document.getElementById("jmlS").value);
@@ -76,6 +83,26 @@
 			var jmlDp = bayar * prc;
 			alert("DP : " + jmlDp);
 			document.getElementById("dp").value = jmlDp;
+		}
+
+		function dp(){
+			if(dp<jmlDp){
+				alert("Total biaya : " + bayar + "\nMinimal DP sebesar " + jmlDp);
+				document.getElementById("image").disabled = true;
+				document.getElementById("submit").disabled = true;
+				return false;
+
+			}if(dp>jmlDp){
+				alert("Total biaya : " + bayar + "\nMaksimal DP sebesar " + bayar);
+				document.getElementById("image").disabled = true;
+				document.getElementById("submit").disabled = true;
+				return false;
+			}if(dp==jmlDp){
+				document.getElementById("image").disabled = false;
+				document.getElementById("submit").disabled = false;
+			}
+
+			return true;
 		}
 	</script>
 </head>
@@ -204,103 +231,7 @@
 							</span>
 						<h4 class="text-section">Components</h4>
 					</li>
-					<!--<li class="nav-item">
-                        <a data-toggle="collapse" href="#base">
-                            <i class="fas fa-layer-group"></i>
-                            <p>Base</p>
-                            <span class="caret"></span>
-                        </a>
-                        <div class="collapse" id="base">
-                            <ul class="nav nav-collapse">
-                                <li>
-                                    <a href="../components/avatars.html">
-                                        <span class="sub-item">Avatars</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="../components/buttons.html">
-                                        <span class="sub-item">Buttons</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="../components/gridsystem.html">
-                                        <span class="sub-item">Grid System</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="../components/panels.html">
-                                        <span class="sub-item">Panels</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="../components/notifications.html">
-                                        <span class="sub-item">Notifications</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="../components/sweetalert.html">
-                                        <span class="sub-item">Sweet Alert</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="../components/font-awesome-icons.html">
-                                        <span class="sub-item">Font Awesome Icons</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="../components/simple-line-icons.html">
-                                        <span class="sub-item">Simple Line Icons</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="../components/flaticons.html">
-                                        <span class="sub-item">Flaticons</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="../components/typography.html">
-                                        <span class="sub-item">Typography</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>-->
-					<!--<li class="nav-item">
-                        <a data-toggle="collapse" href="#sidebarLayouts">
-                            <i class="fas fa-th-list"></i>
-                            <p>Sidebar Layouts</p>
-                            <span class="caret"></span>
-                        </a>
-                        <div class="collapse" id="sidebarLayouts">
-                            <ul class="nav nav-collapse">
-                                <li>
-                                    <a href="../sidebar-style-1.html">
-                                        <span class="sub-item">Sidebar Style 1</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="../overlay-sidebar.html">
-                                        <span class="sub-item">Overlay Sidebar</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="../compact-sidebar.html">
-                                        <span class="sub-item">Compact Sidebar</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="../static-sidebar.html">
-                                        <span class="sub-item">Static Sidebar</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="../icon-menu.html">
-                                        <span class="sub-item">Icon Menu</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>-->
+
 					<li class="nav-item active submenu">
 						<a data-toggle="collapse" href="#forms">
 							<i class="fas fa-pen-square"></i>
@@ -310,11 +241,6 @@
 						<div class="collapse show" id="forms">
 							<ul class="nav nav-collapse">
 
-								<!--<li>
-                                    <a th:href="@{/product}">
-                                        <span class="sub-item">Form Produk</span>
-                                    </a>
-                                </li>-->
 								<li>
 									<a th:href="@{ordering/order}">
 										<span class="sub-item">Form Pemesanan</span>
@@ -369,50 +295,7 @@
 							</ul>
 						</div>
 					</li>
-					<!--<li class="nav-item">
-                        <a data-toggle="collapse" href="#maps">
-                            <i class="fas fa-map-marker-alt"></i>
-                            <p>Maps</p>
-                            <span class="caret"></span>
-                        </a>
-                        <div class="collapse" id="maps">
-                            <ul class="nav nav-collapse">
-                                <li>
-                                    <a href="../maps/jqvmap.html">
-                                        <span class="sub-item">JQVMap</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>-->
-					<!--<li class="nav-item">
-                        <a data-toggle="collapse" href="#charts">
-                            <i class="far fa-chart-bar"></i>
-                            <p>Charts</p>
-                            <span class="caret"></span>
-                        </a>
-                        <div class="collapse" id="charts">
-                            <ul class="nav nav-collapse">
-                                <li>
-                                    <a href="../charts/charts.html">
-                                        <span class="sub-item">Chart Js</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="../charts/sparkline.html">
-                                        <span class="sub-item">Sparkline</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>-->
-					<!--<li class="nav-item">
-                        <a href="../widgets.html">
-                            <i class="fas fa-desktop"></i>
-                            <p>Widgets</p>
-                            <span class="badge badge-success">4</span>
-                        </a>
-                    </li>-->
+
 				</ul>
 			</div>
 		</div>
@@ -467,18 +350,10 @@
 												<label for="quantity" class="placeholder">Jumlah</label>
 											</div>
 											<div class="form-group form-floating-label">
-												<input type="number" class="form-control input-bOrder-bottom" th:field="*{dp}"  name="dp" id="dp" required>
+												<input type="number" class="form-control input-bOrder-bottom" th:field="*{dp}" onkeyup="validasi_input()"  name="dp" id="dp" required>
 												<label for="dp" class="placeholder">DP</label>
 											</div>
 
-											<!--<div class="form-group form-floating-label">
-												<input type="date" class="form-control input-bOrder-bottom" th:field="*{OrderDate}"  name="OrderDate" id="OrderDate">
-												<label for="OrderDate" class="placeholder">Tanggal pemesanan</label>
-											</div>
-											<div class="form-group form-floating-label">
-												<input type="date" class="form-control input-bOrder-bottom" th:field="*{deadline}"   name="deadline" id="deadline">
-												<label for="dp" class="placeholder">Tenggat</label>
-											</div>-->
 											<div class="form-group form-floating-label">
 												<label for="image" class="placeholder">Struk DP</label><br>
 												<input type="file" class="form-control input-bOrder-bottom"  accept="image/*" name="image" id="image" required="true">
@@ -487,10 +362,22 @@
 											<div class="tblukuran">
 												<center><label><a th:href="@{/ordering/tabelukuran}">Tabel Ukuran</a></label></center>
 											</div>
-											<div class="form-group form-floating-label">
+											<div class="form-group form-floating-label" style="height:80px;">
 												<label for="jeniskain" class="placeholder">Jenis Kain</label><br>
-												<input type="text" class="form-control input-bOrder-bottom"   name="jeniskain" id="jeniskain" required="true">
+												<select name="jeniskain" id="jeniskain"  required="true" >
+													<option value="Flanel">Flanel</option>
+													<option value="Katun" >Katun</option>
+													<option value="Drill">Drill</option>
+													<option value="Cotton combed">Cotton combed</option>
+													<option value="U. S. Pima Cotton">U. S. Pima Cotton</option>
+													<option value="Cotton bambo">Cotton bambo</option>
+													<option value="Thisilk">Thisilk</option>
+													<option value="Nilon">Nilon</option>
+												</select>
 											</div>
+											<!--<div class="tblukuran">
+												<center><label><a th:href="@{/ordering/tabelwarna}">Tabel Warna</a></label></center>
+											</div>-->
 											<div class="form-group form-floating-label">
 												<label for="warnakain" class="placeholder">Warna Kain</label><br>
 												<input type="text" class="form-control input-bOrder-bottom"   name="warnakain" id="warnakain" required="true">
@@ -526,15 +413,14 @@
 											<div class="form-group">
 												<div class="input-group">
 													<div class="input-group-prepend">
-														<span class="input-group-text">Detail Pesanan</span>
+														<span class="input-group-text">Catatan Pesanan</span>
 													</div>
-													<textarea class="form-control" aria-label="With textarea" name="OrderDetails"  th:field="*{OrderDetails}" required="true"></textarea>
+													<textarea class="form-control" aria-label="With textarea" name="OrderDetails"  id="OrderDetails" th:field="*{OrderDetails}" required="true"></textarea>
 												</div>
 											</div>
 										</div>
 									</div>
 								</div>
-								<!-- disini-->
 								<div class="col-md-12">
 
 									<ul style="float:center;"><!--class="timeline"-->
@@ -585,7 +471,7 @@
 								</ul>
 							</div>
 							<div class="card-action">
-								<button class="btn btn-success">Submit</button>&nbsp;&nbsp;&nbsp;
+								<button class="btn btn-success" id="submit">Submit</button>&nbsp;&nbsp;&nbsp;
 							</div>
 					</div>
 					</form>
