--- a/pemesanan/src/main/resources/templates/forms/transactionforms.html
+++ b/pemesanan/src/main/resources/templates/forms/transactionforms.html
@@ -26,6 +26,37 @@
 	<link rel="stylesheet" href="../../assets/css/atlantis.min.css">
 	<!-- CSS Just for demo purpose, don't include it in your project -->
 	<link rel="stylesheet" href="../../assets/css/demo.css">
+	<script type="text/javascript">
+		function validasi_input(){
+		  var finalCost = document.getElementById("finalCost").value;
+			var dp = document.getElementById("dp").value;
+			alert("pembayaran awal (dp)" + dp);
+			alert("pembayaran akhir" + finalCost);
+			var total = (parseInt(finalCost) + parseInt(dp));
+			alert("total pembayaran : " + total);
+			var totalPay = document.getElementById("totalPay").value;
+			if(totalPay < finalCost){
+				var kurang = parseInt(finalCost) - parseInt(totalPay);
+				alert("Pembayaran akhir kurang Rp. " + kurang);
+				document.getElementById("image").disabled = true;
+				document.getElementById("note").disabled = true;
+				document.getElementById("submit").disabled = true;
+				return false;
+			}else if( totalPay > finalCost){
+				var lebih = parseInt(totalPay) - parseInt(finalCost);
+				alert("Pembayaran akhir lebih Rp. " + lebih);
+				document.getElementById("image").disabled = true;
+				document.getElementById("note").disabled = true;
+				document.getElementById("submit").disabled = true;
+				return false;
+			}
+			document.getElementById("image").disabled = false;
+				document.getElementById("note").disabled = false;
+				document.getElementById("submit").disabled = false;
+			return true;
+		}
+
+	</script>
 </head>
 <body>
 	<div class="wrapper sidebar_minimize">
@@ -139,103 +170,7 @@
 							</span>
 							<h4 class="text-section">Components</h4>
 						</li>
-						<!--<li class="nav-item">
-							<a data-toggle="collapse" href="#base">
-								<i class="fas fa-layer-group"></i>
-								<p>Base</p>
-								<span class="caret"></span>
-							</a>
-							<div class="collapse" id="base">
-								<ul class="nav nav-collapse">
-									<li>
-										<a href="../components/avatars.html">
-											<span class="sub-item">Avatars</span>
-										</a>
-									</li>
-									<li>
-										<a href="../components/buttons.html">
-											<span class="sub-item">Buttons</span>
-										</a>
-									</li>
-									<li>
-										<a href="../components/gridsystem.html">
-											<span class="sub-item">Grid System</span>
-										</a>
-									</li>
-									<li>
-										<a href="../components/panels.html">
-											<span class="sub-item">Panels</span>
-										</a>
-									</li>
-									<li>
-										<a href="../components/notifications.html">
-											<span class="sub-item">Notifications</span>
-										</a>
-									</li>
-									<li>
-										<a href="../components/sweetalert.html">
-											<span class="sub-item">Sweet Alert</span>
-										</a>
-									</li>
-									<li>
-										<a href="../components/font-awesome-icons.html">
-											<span class="sub-item">Font Awesome Icons</span>
-										</a>
-									</li>
-									<li>
-										<a href="../components/simple-line-icons.html">
-											<span class="sub-item">Simple Line Icons</span>
-										</a>
-									</li>
-									<li>
-										<a href="../components/flaticons.html">
-											<span class="sub-item">Flaticons</span>
-										</a>
-									</li>
-									<li>
-										<a href="../components/typography.html">
-											<span class="sub-item">Typography</span>
-										</a>
-									</li>
-								</ul>
-							</div>
-						</li>-->
-						<!--<li class="nav-item">
-							<a data-toggle="collapse" href="#sidebarLayouts">
-								<i class="fas fa-th-list"></i>
-								<p>Sidebar Layouts</p>
-								<span class="caret"></span>
-							</a>
-							<div class="collapse" id="sidebarLayouts">
-								<ul class="nav nav-collapse">
-									<li>
-										<a href="../sidebar-style-1.html">
-											<span class="sub-item">Sidebar Style 1</span>
-										</a>
-									</li>
-									<li>
-										<a href="../overlay-sidebar.html">
-											<span class="sub-item">Overlay Sidebar</span>
-										</a>
-									</li>
-									<li>
-										<a href="../compact-sidebar.html">
-											<span class="sub-item">Compact Sidebar</span>
-										</a>
-									</li>
-									<li>
-										<a href="../static-sidebar.html">
-											<span class="sub-item">Static Sidebar</span>
-										</a>
-									</li>
-									<li>
-										<a href="../icon-menu.html">
-											<span class="sub-item">Icon Menu</span>
-										</a>
-									</li>
-								</ul>
-							</div>
-						</li>-->
+
 						<li class="nav-item active submenu">
 							<a data-toggle="collapse" href="#forms">
 								<i class="fas fa-pen-square"></i>
@@ -260,11 +195,6 @@
 											<span class="sub-item">Form Transaksi</span>
 										</a>
 									</li>
-									<!--<li>
-										<a th:href="@{user/create/customer}">
-											<span class="sub-item">Form Pelanggan</span>
-										</a>
-									</li>-->
 								</ul>
 							</div>
 						</li>
@@ -291,63 +221,10 @@
 											<span class="sub-item">Transaksi</span>
 										</a>
 									</li>
-									<!--<li>
-										<a th:href="@{/sale/show}">
-											<span class="sub-item">Penjualan</span>
-										</a>
-									</li>
-									<li>
-										<a th:href="@{/user/customer}">
-											<span class="sub-item">Pelanggan</span>
-										</a>
-									</li>-->
 								</ul>
 							</div>
 						</li>
-						<!--<li class="nav-item">
-							<a data-toggle="collapse" href="#maps">
-								<i class="fas fa-map-marker-alt"></i>
-								<p>Maps</p>
-								<span class="caret"></span>
-							</a>
-							<div class="collapse" id="maps">
-								<ul class="nav nav-collapse">
-									<li>
-										<a href="../maps/jqvmap.html">
-											<span class="sub-item">JQVMap</span>
-										</a>
-									</li>
-								</ul>
-							</div>
-						</li>-->
-						<!--<li class="nav-item">
-							<a data-toggle="collapse" href="#charts">
-								<i class="far fa-chart-bar"></i>
-								<p>Charts</p>
-								<span class="caret"></span>
-							</a>
-							<div class="collapse" id="charts">
-								<ul class="nav nav-collapse">
-									<li>
-										<a href="../charts/charts.html">
-											<span class="sub-item">Chart Js</span>
-										</a>
-									</li>
-									<li>
-										<a href="../charts/sparkline.html">
-											<span class="sub-item">Sparkline</span>
-										</a>
-									</li>
-								</ul>
-							</div>
-						</li>-->
-						<!--<li class="nav-item">
-							<a href="../widgets.html">
-								<i class="fas fa-desktop"></i>
-								<p>Widgets</p>
-								<span class="badge badge-success">4</span>
-							</a>
-						</li>-->
+
 					</ul>
 				</div>
 			</div>
@@ -393,21 +270,15 @@
 												<input type="text" class="form-control input-bOrder-bottom" th:value="${transaction.OrderId}" id="OrderId"  name="OrderId"  required>
 												<label for="OrderId" class="placeholder">Id Pesanan</label>
 											</div>
+											<input type="hidden" class="form-control input-bOrder-bottom" th:value="${transaction.ordering.dp}" id="dp"  name="OrderId"  required>
+											<input type="hidden" class="form-control input-bOrder-bottom" th:value="${transaction.ordering.finalCost}" id="finalCost"  name="OrderId"  required>
 											<div class="form-group form-floating-label">
-												<input type="number" class="form-control input-bOrder-bottom" th:value="${transaction.totalPay}" id="totalPay" name="totalPay" required>
-												<label for="totalPay" class="placeholder">Jumlah Bayar</label>
+												<input type="number" class="form-control input-bOrder-bottom" th:value="${transaction.ordering.finalCost}" id="totalPay" name="totalPay" onkeyup="validasi_input()" required>
+												<label for="totalPay" class="placeholder">Bayar</label>
 											</div>
-											<!--<div class="form-check" style="font-size:15px">
-
-												<label class="form-radio-label">Status Pembayaran</label>
-												<br>
-												<input class="form-radio-input" type="radio" name="lunas" th:value="selesai" required="">Selesai
-												&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-												<input class="form-radio-input" type="radio" name="lunas" th:value="menunggu" required="">Menunggu
-											</div>-->
 											<div class="form-group form-floating-label">
 												<label for="image" class="placeholder">Struk Pembayaran</label><br>
-												<input type="file" class="form-control input-bOrder-bottom"   name="image" id="image" required>
+												<input type="file" class="form-control input-bOrder-bottom"  accept="image/*" name="image" id="image" required>
 											</div>
 											<div class="form-group">
 												<div class="input-group">
@@ -421,7 +292,7 @@
 									</div>
 								</div>
 								<div class="card-action">
-									<button class="btn btn-success">Submit</button>&nbsp;&nbsp;&nbsp;
+									<button class="btn btn-success" id="submit">Submit</button>&nbsp;&nbsp;&nbsp;
 								</div>
 							</div>
 							</form>
